// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelmHttpManifestSource tests Should match snapshot 1`] = `
<div>
  <div
    class="nopadLeft accordionSummary"
    id="Stage.STG1.Service.Manifests"
  >
    <div
      class="subheading"
    >
      pipelineSteps.deploy.serviceSpecifications.deploymentTypes.manifests
    </div>
    <div>
      <p
        class="StyledProps--font StyledProps--main inputheader StyledProps--margin-top-medium StyledProps--margin-bottom-small"
      >
        HemlHttp
        <span
          class="bp3-popover-wrapper manifestInfoTooltip"
        >
          <span
            class="bp3-popover-target"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
              tabindex="0"
            >
              <svg
                height="16"
                viewBox="0 0 12 12"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
        </span>
      </p>
      <div
        class="Layout--vertical StyledProps--main inputWidth layoutVerticalSpacing"
        data-name="manifest"
      >
        <div
          class="verticalSpacingInput"
          data-name="connectorRefContainer"
        >
          <div
            class="connectorLabel"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 5px;"
            >
              connector
            </div>
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="bp3-form-group"
                style="margin-bottom: 0px;"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    style="width: 370px;"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                      data-testid="cr-field-stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.store.spec.connectorRef"
                      style="width: 370px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="placeholder"
                        />
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="verticalSpacingInput"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.chartName"
            >
              pipeline.manifestType.http.chartName
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.chartName"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="verticalSpacingInput"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.chartVersion"
            >
              pipeline.manifestType.http.chartVersion
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.chartVersion"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HelmHttpManifestSource tests Should match snapshot with fromTrigger 1`] = `
<div>
  <div
    class="nopadLeft accordionSummary"
    id="Stage.STG1.Service.Manifests"
  >
    <div>
      <p
        class="StyledProps--font StyledProps--main inputheader StyledProps--margin-top-medium StyledProps--margin-bottom-small"
      >
        <span
          class="bp3-popover-wrapper manifestInfoTooltip"
        >
          <span
            class="bp3-popover-target"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
              tabindex="0"
            >
              <svg
                height="16"
                viewBox="0 0 12 12"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
        </span>
      </p>
      <div
        class="Layout--vertical StyledProps--main inputWidth layoutVerticalSpacing"
        data-name="manifest"
      >
        <div
          class="verticalSpacingInput"
          data-name="connectorRefContainer"
        >
          <div
            class="connectorLabel"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 5px;"
            >
              connector
            </div>
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="bp3-form-group"
                style="margin-bottom: 0px;"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    style="width: 370px;"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                      data-testid="cr-field-stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.store.spec.connectorRef"
                      style="width: 370px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="placeholder"
                        />
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="verticalSpacingInput"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
              for="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.chartName"
            >
              pipeline.manifestType.http.chartName
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.chartName"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="verticalSpacingInput"
        >
          <div
            class="bp3-form-group bp3-disabled"
          >
            <label
              class="bp3-label"
              for="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.chartVersion"
            >
              pipeline.manifestType.http.chartVersion
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              >
                <div
                  class="bp3-popover-wrapper MultiTypeInput--input"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="stages[0].stage.spec.serviceConfig.serviceDefinition.spec.manifests[0].manifest.spec.chartVersion"
                        placeholder="<+expression>"
                        type="text"
                        value="<+trigger.manifest.version>"
                      />
                    </div>
                  </div>
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--EXPRESSION"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="expression-input"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4.875 2.588C5.305 2.218 5.889 2 6.647 2a.5.5 0 110 1c-.556 0-.898.155-1.12.346-.228.197-.374.472-.462.784a3.18 3.18 0 00-.106.86h1.449a.5.5 0 010 1H4.992v5.505a.5.5 0 01-1 0V5.99h-.936a.5.5 0 010-1h.903a4.173 4.173 0 01.143-1.13c.123-.435.35-.907.773-1.27zm.111 2.823c0 .001 0 .001 0 0m0 0zm7.059 5.019c-.242.268-.455.59-.553.786-.17.341-.472.705-.766.994-.285.281-.635.565-.932.684a.5.5 0 11-.371-.929c.102-.04.335-.204.6-.467.258-.253.475-.528.575-.729.142-.283.407-.68.704-1.009.15-.165.32-.33.5-.456.168-.118.406-.248.68-.248a.5.5 0 01.013 1c-.004.002-.042.012-.118.066a2.152 2.152 0 00-.332.307z"
                        fill="#CurrentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M10.045 10.43c.242.268.455.59.553.786.17.341.473.705.766.994.285.281.635.565.932.684a.5.5 0 10.372-.929c-.103-.04-.335-.204-.602-.467-.257-.253-.473-.528-.574-.729a5.003 5.003 0 00-.704-1.009 3.08 3.08 0 00-.5-.456c-.168-.118-.406-.248-.68-.248a.5.5 0 00-.012 1c.003.002.041.012.118.066a2.1 2.1 0 01.33.307z"
                        fill="#CurrentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M8.367 7.805a.5.5 0 01.186.682c-.854 1.494-.652 3.467.013 4.797a.5.5 0 11-.895.447c-.771-1.543-1.049-3.881.013-5.74a.5.5 0 01.683-.186zm5.273 0a.5.5 0 01.683.186c1.062 1.859.784 4.197.013 5.74a.5.5 0 11-.895-.447c.665-1.33.867-3.303.013-4.797a.5.5 0 01.186-.682z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
